[package]
name = "fantastic-rs"
version = "0.5.0"
edition = "2021"

[dependencies]
usdpl-back = { version = "0.11", features = ["blocking"], path = "../../usdpl-rs/usdpl-back"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

nrpc = "0.6"
prost = "0.11"
tokio = { version = "1", features = ["sync"] }

# logging
log = "0.4"
simplelog = "0.12"

[build-dependencies]
usdpl-build = { version = "0.11", path = "../../usdpl-rs/usdpl-build" }

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 4
