[package]
name = "fantastic-rs"
version = "0.4.0"
edition = "2021"

[dependencies]
usdpl-back = { version = "0.10", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# logging
log = "0.4"
simplelog = "0.12"

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 4
